# playerctl

./: meson.build
data/: meson.build  org.mpris.MediaPlayer2.playerctld.service.in  playerctld.service.in
